--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -5,6 +5,7 @@
  */
 html {
   box-sizing: border-box;
+
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -18,8 +19,26 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+.container {
+  margin: auto;
+  padding: 1em 2em;
+  width: 450px;
+  background-color: white;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
