--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,9 +1,13 @@
 #nav-bar {
   height: 80px;
+  width: 100%;
   background-color: #00a087;
   color: #e8fdff;
   padding-left: 2em;
   padding-right: 2em;
+  position: fixed;
+  overflow: scroll;
+  z-index: 10;
 }
 
 #nav-bar .logo {
