--- a/public/styles/posted-tweet.css
+++ b/public/styles/posted-tweet.css
@@ -1,5 +1,6 @@
 .tweet {
   margin-top: 27px;
+  width: 400px;
   border: 1px solid #a59b9b;
   border-radius: 5px;
   opacity: 0.75;
@@ -25,6 +26,7 @@
 
 .tweet header p {
   margin: 0px;
+  float: left;
 }
 
 .tweet .avatar {
