eliminated outline of focused areas, and added code to ensure counter resets to 140 after a post has been made

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,11 +24,9 @@ body {
 
 .container {
   margin: auto;
-  padding: 7em 2em;
-  padding-bottom: 700px;
+  padding: 7em 2em 2em 2em;
   width: 450px;
   background-color: white;
-
 }
 
 
