--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -27,6 +27,7 @@
 #nav-bar .compose-btn {
   float: right;
   margin-top: 14px;
+  outline: none;
   border: 1px solid black;
   border-radius: 5px;
   height: 50px;
